Remove unnecessary opens and exports